.lib/iptables
# Generated by iptables-save v1.4.7 on Thu Apr 17 02:06:31 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:380]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6789 -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 6800:6810 -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 5900:6400 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6789 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6789 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 123 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 6080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9696 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3260 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 27017 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8778 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8776 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8775 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8774 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8773 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5673 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9292 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 9191 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 35357 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5673 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -p udp -m udp --sport 123 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 123 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu Apr 17 02:06:31 2014
